--- a/style.css
+++ b/style.css
@@ -40,12 +40,11 @@ input {
 }
 .card {
   border: 1px solid black;
-  border-radius: 15px;
   width: 250px;
   box-shadow: 3px 5px 15px grey;
   background-color: rgb(238, 238, 238);
 }
-image {
+.img {
   width: 100%;
   object-fit: contain;
 }
@@ -54,4 +53,7 @@ h3 {
 }
 h4 {
   padding: 10px;
+}
+.not-found {
+  display: none;
 }
